--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,8 +45,10 @@ crossterm = "0.27"
 rlimit = "0.10"
 ctrlc = "3.4"
 anyhow = "1.0"
+dotenvy = "0.15"
 leaky-bucket = "1.1"
 gaoya = "0.2"
+async-trait = "0.1"
 
 [dev-dependencies]
 tempfile = "3.20"
